@@ -4,6 +4,7 @@
 - Reorganized the source code to fall in line with guidelines.
 - Fixed the ezcSystemReaderCantScanOSException class to properly inherit
   from ezcSystemInfoException and ezcBaseException.
+- Implemented issue #15352: Added support for XCache.
 
 
 1.0.7 - Monday 10 November 2008
